--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <h3> Watch the development of NOKU.wtf in real time on <a href = "https://github.com/Noku-app"> GitHub </a> </h3>
         <h3> Follow us on <a href= "https://www.instagram.com/noku.wtf/" > Instagram! </a></h3> 
         <h3> Join the official <a href = "https://discord.gg/bUhhTu6wwt"> Discord </a> </h3>
-         
+        <h3> Test out the <a href = "https://cdn.xemplarsoft.com/app-debug.apk"> Android API </a> </h3>
+        <br>
+     
         <h2 id = "credits"> Credits </h2>
         <h3 id = "community"> This developing community app was brought to you by: </h3> 
         <h4> 
